# fmusim

./: .gitignore  .gitmodules  404.html  Cargo.toml  LICENSE  README.md  index.html  install.ps1  install.sh  mkdocs.yml  sitemap.xml
.github/workflows/: build.yml  deploy.yml
docs/: compatibility.md  index.md  tutorial.md
docs/stylesheets/: extra.css
fmusim/: Cargo.toml
fmusim/src/: build.rs  info.rs  main.rs  validate.rs
fmusim/src/simulate/: fmi2.rs  fmi3.rs  mod.rs
fmusim/tests/: build_test.rs  common.rs  csv_test.rs  fmu_state_test.rs  list_test.rs  pack_test.rs
fmusim/tests/resources/: Feedthrough_types_expected_out.csv  Feedthrough_types_in.csv
fmusim/tests/resources/fmi2/: Feedthrough_interpolation_in.csv  Feedthrough_types_in.csv  Feedthrough_types_out.csv
fmusim/tests/resources/fmi3/: Feedthrough_events_in.csv  Feedthrough_events_out.csv  Feedthrough_interpolation_expected.csv
search/: search_index.json
tutorial/: index.html
