[package]
name = "fmusim"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.9.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crash-handler = "0.7"
fmi-rs = { path = "../fmi-rs/fmi-rs" }
fmi-rs-sundials = { path = "../fmi-rs/fmi-rs-sundials" }
fmi-rs-libxml2 = { path = "../fmi-rs/fmi-rs-libxml2" }
zip = "8.6"
tempfile = "3.27"
csv = "1.4.0"
colored = "3.1.1"
plotly = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
term_size = "0.3"
toml = "1.1"
roxmltree = "0.21.1"

[dev-dependencies]
rstest = "0.26.1"
fmi-rs = { path = "../fmi-rs/fmi-rs", features = ["test-fixtures"] }
