[package]
name = "fmusim"
version.workspace = true
edition.workspace = true

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
csv = "1.4.0"
crash-handler = "0.7"
fmi-rs = { path = "../fmi-rs/fmi-rs", features = ["schema", "sundials"]}
libloading = "0.9.0"
plotly = "0.14.1"
roxmltree = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
tempfile = "3.27"
term_size = "0.3"
zip = "8.6"
anyhow = "1.0.103"
clap-markdown = "0.1.5"

[dev-dependencies]
fmi-rs = { path = "../fmi-rs/fmi-rs", features = ["test-fixtures"] }
rstest = "0.26.1"
